# live-stt

./: .gitignore  AGENT_PROMPT.md  PLAN.md  README.md  SPIKE_REPORT.md  SPIKE_REPORT_BACKENDS.md  list_live_models.py  live_stt.py  pyproject.toml
spike/backends/: DESIGN.md  REPORT.md  RESEARCH_assemblyai_elevenlabs.md  RESEARCH_azure_google_cloud.md  RESEARCH_deepgram.md  RESEARCH_groq.md  RESEARCH_local_oss.md  RESEARCH_openai_realtime.md  bench.py  harness.py  prototype_azure.py  prototype_deepgram.py  prototype_elevenlabs.py  prototype_gemini.py  prototype_openai_realtime.py  results.md  scenarios.py  translate.py
spike/t3_2/: DESIGN.md  REPORT.md  bench.py  harness.py  prototype_a.py  prototype_b.py  prototype_c.py  results.md  scenarios.py
tests/: test_audio.py
